--- a/balances.ipynb
+++ b/balances.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Исходное задание \n",
-    "1. нужно скачивать информацию о блоке и сохранять (чтобы каждый раз не тянуть данные, а если нужно то подгрузить, лучше в несколько потоков)\n",
-    "http://93.125.26.210:34657/block?height=300\n",
-    "2. далее распарсить итеративно все блоки и сохранить информацию о коммитах для каждого валидатора для каждого блока\n",
-    "3. нарисовать графики для валидаторов, график лайфтайма\n",
-    "4. расчитать вознаграждение для каждого исходя из линейно возрастающей награды за каждый блок\n",
-    "5. выдать таблицу - валидатор, баланс"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -74,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# validators_df = pd.read_csv(\"euler_validators_2.csv\", usecols=[\"block\", \"validators\"])"
+    "# Parsing 'val_test.csv' by columns"
    ]
   },
   {
@@ -83,16 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# validators_df[[\"block\", \"validators\"]].to_csv(\"euler_validators.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validators_df = pd.read_csv(\"val_test.csv\") #pd.read_csv(\"euler_validators2.csv\")"
+    "validators_df = pd.read_csv(\"val_test.csv\")"
    ]
   },
   {
@@ -131,15 +109,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# validators_df[\"validators\"] = validators_df[\"validators\"].apply(lambda x: set(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_validators = set([v for v_list in validators_df[\"validators\"].tolist() for v in v_list])"
    ]
   },
@@ -153,10 +122,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Визуализация работы валидаторов"
+    "# Visualisation of validators lifetime"
    ]
   },
   {
@@ -165,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Последний актуальный блок\n",
+    "# Last block height\n",
     "MAX_BLOCK = validators_df[\"block\"].max()\n",
     "MAX_BLOCK"
    ]
@@ -266,10 +237,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Расчет вознаграждения для каждого валидатора"
+    "# The calculation of rewards to validators"
    ]
   },
   {
@@ -278,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Количество токенов, участвующее в раздаче\n",
+    "# Genesis supply allocated to validators i\n",
     "AMOUNT_OF_TOKENS = 10000000"
    ]
   },
