--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import urllib.request, json \n",
-    "import time\n",
-    "#from tqdm import tqdm_notebook as tqdm"
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Endpoint for parsing validators lifetime "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +43,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Chose range of parsing. Normally from 2 to last block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_block = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end_block = 3792535"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,29 +83,11 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BLOCK: 10000 -- 0.26 % TIME: 13.33 s\n",
-      "BLOCK: 20000 -- 0.53 % TIME: 31.45 s\n",
-      "BLOCK: 30000 -- 0.79 % TIME: 51.36 s\n",
-      "BLOCK: 40000 -- 1.05 % TIME: 67.43 s\n",
-      "BLOCK: 50000 -- 1.32 % TIME: 85.3 s\n",
-      "BLOCK: 60000 -- 1.58 % TIME: 107.49 s\n",
-      "BLOCK: 70000 -- 1.85 % TIME: 131.19 s\n",
-      "BLOCK: 80000 -- 2.11 % TIME: 149.29 s\n",
-      "BLOCK: 90000 -- 2.37 % TIME: 170.8 s\n",
-      "BLOCK: 100000 -- 2.64 % TIME: 197.66 s\n",
-      "BLOCK: 110000 -- 2.9 % TIME: 224.92 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# перезапустить\n",
+    "# relaunch in case of disconnect \n",
     "start_time = time.time()\n",
-    "for i in range(2, 3792535):\n",
+    "for i in range(start_block, end_block):\n",
     "    url_p = url + str(i) + '\"'\n",
     "    data = parse(url_p)\n",
     "    results.append({\n",
@@ -86,21 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'block': 67761,\n",
-       " 'validators': \"{'bo35XxXyIDn9znqS+SipU2sVSMW8KF9KQPRaKjcz/HM=', 'TBsw6+2DSpLzDWwsyQOwL+LDI950vI+MMzKFqwYoOB8=', 'kJdUUEWBMYwVkxvue2hn+nIsfkzrtH4YSFRy7DflJo8=', 'MndnA1xkRpg51c7+grh5oPU6vS+eMhapYgC6ffnyGNA=', 'm5m+L4jS51XuEPT7ynPBGoZi3Aj+HpWsT25jwWpCXoU=', 'er5nOfcT583OQP/QeLR/Wqpl+ttrr3seCwmiZpkTv6U='}\"}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results[-1]"
    ]
@@ -111,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# посмотреть последний блок на котором прервалось\n",
+    "# In case of disconnect look at last parsed block and start from the nex one\n",
     "print(results[-1])"
    ]
   },
