--- a/balances.ipynb
+++ b/balances.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Genesis supply allocated to validators i\n",
+    "# Genesis supply allocated to validators in CYB\n",
     "AMOUNT_OF_TOKENS = 10000000"
    ]
   },
@@ -261,16 +261,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Коэффициенты прямой для вычисления вознаграждения\n",
+    "# Linear function coefficients for rewarding\n",
     "K = 1\n",
     "B = 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Вопрос: как влияют эти коэффициенты на вознаграждение валидаторов?"
    ]
   },
   {
@@ -348,15 +341,6 @@
    "outputs": [],
    "source": [
     "balances_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#balances_df.sort_values(\"balance\").plot(kind=\"barh\", figsize=(10, 25))"
    ]
   },
   {
