fix end block value in cycle

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "# relaunch in case of disconnect \n",
     "start_time = time.time()\n",
-    "for i in range(start_block, end_block):\n",
+    "for i in range(start_block, end_block+1):\n",
     "    url_p = url + str(i) + '\"'\n",
     "    data = parse(url_p)\n",
     "    results.append({\n",
